version/0.4/_sources/api/ansys/geometry/core/tools/problem_areas/ExtraEdgeProblemAreas.rst.txt




ExtraEdgeProblemAreas
=====================

.. py:class:: ExtraEdgeProblemAreas(id: str, grpc_client: ansys.geometry.core.connection.GrpcClient, edges: beartype.typing.List[ansys.geometry.core.designer.edge.Edge])
   :canonical: ansys.geometry.core.tools.problem_areas.ExtraEdgeProblemAreas



Bases: :py:obj:`ProblemArea`


   Represents a extra edge problem area with unique identifier and associated edges.


   :Parameters:

       **id** : :class:`python:str`
           Server-defined ID for the body.

       **grpc_client** : :obj:`GrpcClient`
           Active supporting geometry service instance for design modeling.

       **edges** : :obj:`List`\[:obj:`Edge`]
           List of edges associated with the design.














   ..
       !! processed by numpydoc !!












Overview
--------
.. py:currentmodule:: ExtraEdgeProblemAreas
.. tab-set::




    .. tab-item:: Properties

        .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~edges`
            - The list of the ids of the edges connected to this problem area.






Import detail
-------------

.. code-block:: python

    from ansys.geometry.core.tools.problem_areas import ExtraEdgeProblemAreas


Property detail
---------------
.. py:property:: edges
   :canonical: ansys.geometry.core.tools.problem_areas.ExtraEdgeProblemAreas.edges
   :type: beartype.typing.List[ansys.geometry.core.designer.edge.Edge]


   
   The list of the ids of the edges connected to this problem area.
















   ..
       !! processed by numpydoc !!





